test/deployer/testdata/agentgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  # agentgateway.dev/agentgateway is the modern controllerName; this tests that
  # the legacy name works.
  controllerName: kgateway.dev/agentgateway
  description: Specialized class for agentgateway.
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
